# api/docs/swagger.json
@@ -605,7 +605,7 @@
                 }
             }
         },
-        "/health/summary/{user_id}/daily/{date}": {
+        "/health/summary/{user_id}/daily": {
             "get": {
                 "security": [
                     {
@@ -635,7 +635,7 @@
                         "type": "string",
                         "description": "Kun (format: yyyy/mm/dd)",
                         "name": "date",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -655,7 +655,7 @@
                 }
             }
         },
-        "/health/summary/{user_id}/weekly/{start_date}": {
+        "/health/summary/{user_id}/weekly": {
             "get": {
                 "security": [
                     {
@@ -685,7 +685,7 @@
                         "type": "string",
                         "description": "Boshlang'ich sana (format: yyyy/mm/dd)",
                         "name": "start_date",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
