# casbin/policy_casbin.go
@@ -1,7 +1,6 @@
 package casbin
 
 import (
-	"database/sql"
 	"fmt"
 	"log/slog"
 
@@ -18,19 +17,19 @@ const (
 )
 
 func CasbinEnforcer(logger *slog.Logger) (*casbin.Enforcer, error) {
-	connStr := fmt.Sprintf("host=%s port=%s user=%s password=%s sslmode=disable", host, port, username, password)
-	db, err := sql.Open("postgres", connStr)
-	if err != nil {
-		logger.Error("Error connecting to database", "error", err.Error())
-		return nil, err
-	}
-	defer db.Close()
+	// connStr := fmt.Sprintf("host=%s port=%s user=%s password=%s sslmode=disable", host, port, username, password)
+	// db, err := sql.Open("postgres", connStr)
+	// if err != nil {
+	// 	logger.Error("Error connecting to database", "error", err.Error())
+	// 	return nil, err
+	// }
+	// defer db.Close()
 
-	_, err = db.Exec("DROP DATABASE IF EXISTS casbin")
-	if err != nil {
-		logger.Error("Error dropping Casbin database", "error", err.Error())
-		return nil, err
-	}
+	// _, err = db.Exec("DROP DATABASE IF EXISTS casbin")
+	// if err != nil {
+	// 	logger.Error("Error dropping Casbin database", "error", err.Error())
+	// 	return nil, err
+	// }
 
 	adapter, err := xormadapter.NewAdapter("postgres", fmt.Sprintf("host=%s port=%s user=%s dbname=%s password=%s sslmode=disable", host, port, username, dbname, password))
 	if err != nil {
@@ -49,17 +48,21 @@ func CasbinEnforcer(logger *slog.Logger) (*casbin.Enforcer, error) {
 		logger.Error("Error loading Casbin policy", "error", err.Error())
 		return nil, err
 	}
-// patient, doctor, admin
+	// patient, doctor, admin
 	policies := [][]string{
 		{"doctor", "/health/medical_recordsAdd", "POST"},
 		{"admin", "/health/medical_recordsAdd", "POST"},
+
 		{"doctor", "/health/medical_recordsGet/:id", "GET"},
 		{"admin", "/health/medical_recordsGet/:id", "GET"},
 		{"patient", "/health/medical_recordsGet/:id", "GET"},
+
 		{"doctor", "/health/medical_recordsUp", "PUT"},
 		{"admin", "/health/medical_recordsUp", "PUT"},
 		{"patient", "/health/medical_recordsUp", "PUT"},
+
 		{"admin", "/health/medical_recordsDel/:id", "DELETE"},
+
 		{"admin", "/health/medical_records/user/:userId", "GET"},
 
 		{"patient", "/health/lifestyleAdd", "POST"},
@@ -75,9 +78,10 @@ func CasbinEnforcer(logger *slog.Logger) (*casbin.Enforcer, error) {
 		{"patient", "/health/wearable-dataDel/:id", "DELETE"},
 
 		{"doctor", "/health/recommendationsAdd", "POST"},
+
 		{"patient", "/health/monitoring/:user_id/realtime", "GET"},
-		{"patient", "/health/summary/:user_id/daily/:date", "GET"},
-		{"patient", "/health/summary/:user_id/weekly/:start_date", "GET"},
+		{"patient", "/health/summary/:user_id/daily", "GET"},
+		{"patient", "/health/summary/:user_id/weekly", "GET"},
 	}
 
 	_, err = enforcer.AddPolicies(policies)
